# Git

./: .gitignore  Cargo.toml  README.md  config.txt  current_repository.txt  repositories.txt
algo1/: file1.txt
algo1/.rust_git/: config
clone_daemon/: file1.txt  file2.txt
src/: client.rs  file.rs  lib.rs  main.rs  main_http_server.rs  main_server.rs  metadata.rs  packfile.rs  probando.glade  repository.rs  server_main.rs  staging_area.rs  version_control_system.rs
src/client/: client.rs
src/clients/: client.rs
src/commands/: init.rs
src/constants/: constant.rs  constants.rs
src/current_files/: current_files.rs
src/handlers/: add.rs  branch.rs  cat_file.rs  check_ignore.rs  checkout.rs  clone.rs  commands.rs  commit.rs  fetch.rs  hash_object.rs  log.rs  ls_files.rs  ls_tree.rs  merge.rs  pull.rs  push.rs  rebase.rs  remote.rs  rm.rs  show_ref.rs  status.rs  tag.rs
src/interface/: css.rs  draw.rs  handler.rs  handler_button.rs  interface.glade  interface.rs  style.css
src/interfaces/: css.rs  draw.rs  draw_login.glade  handler.rs  handler_button.rs  interface.glade  interface.rs  login.rs  style.css
src/packfile/: packfile.rs
src/packfiles/: packfile.rs  tag_file.rs
src/protocol/: receive_pack.rs  send_pack.rs
src/proxies/: proxy.rs
src/proxy/: proxy.rs
src/pull_request/: info.md
src/server/: encoder.rs  remote_repository.rs  server.rs  upload_pack.rs
src/servers/: encoder.rs  (+2 more)
test1/: archio1.txt  arvhico4.txt  file1.txt
test_delta/: test_file.txt
test_folder/: a1.txt  chau.txt
tests/: lib.rs  staging_area.rs  tests_functions.rs
(+199 files in other folders)
