[package]
name = "rust-git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "server"
path = "src/server_main.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]

crypto = "0.5.1"
rand = "0.8.5"
sha1 = "0.10.6"
chrono = "0.4.19"
flate2 = "1.0"

[dev-dependencies]
tempdir = "0.3.7"
